@@ -46,15 +46,10 @@
  *
  *  COPYRIGHT (c) 1989, 1990, 1991, 1992, 1993, 1994.
  *  On-Line Applications Research Corporation (OAR).
- *  All rights assigned to U.S. Government, 1994.
- *
- *  This material may be reproduced by or for the U.S. Government pursuant
- *  to the copyright license under the clause at DFARS 252.227-7013.  This
- *  notice must appear in all copies of this file and its derivatives.
  *
  *  Modifications for PPC405GP by Dennis Ehlin
  *
- *  console405.c,v 1.4 1995/12/05 19:23:02 joel Exp
+ * $Id$
  */
 
 #define NO_BSP_INIT
