@@ -1,3 +1,9 @@
+2003-09-04	Joel Sherrill <joel@OARcorp.com>
+
+	* mpc505/timer/timer.c, ppc403/console/console.c,
+	ppc403/console/console405.c: Removed incorrect statement about
+	copyright assignment.
+
 2003-08-20	Joel Sherrill <joel@OARcorp.com>
 
 	* mpc8260/clock/clock.c: Correct copyright statements.
